# rag-who

./: .env.sample  .gitignore  Dockerfile  README.md  parameters_local.toml  parameters_remote.toml  pyproject.toml  rag-who.toml  requirements.txt
prompts/: llm_system_prompt.txt  llm_user_prompt_template_haystack.txt
rag-who/: embedding.py  eval.py  generation.py  haystack_pipeline.py  main.py  preprocessing.py  qdrant_pipeline.py  retreival.py  retrieval.py  utils.py
rag-who/api/: fast.py
src/ragwho/: embedding.py  eval.py  haystack_pipeline.py  preprocessing.py  qdrant_pipeline.py  utils.py
src/ragwho/api/: fast.py
